--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,6 +9,7 @@
             <link href="{{ asset('vendor/bootstrap/docs/assets/css/bootstrap.css') }}" rel="stylesheet" />
             <link href="{{ asset('vendor/bootstrap/docs/assets/css/bootstrap-responsive.css') }}" rel="stylesheet" />
             <link href="{{ asset('vendor/select2/select2.css') }}" rel="stylesheet" />
+            <link href="{{ asset('vendor/fancybox/source/jquery.fancybox.css') }}" rel="stylesheet" />
             <link href="{{ asset('bundles/zenstruckdashboard/css/twitter.css') }}" rel="stylesheet" />
             <link href="{{ asset('bundles/zenstruckmedia/css/twitter.css') }}" rel="stylesheet" />
             <link href="{{ asset('css/style.css') }}" rel="stylesheet" />
@@ -30,7 +31,7 @@
                 {% endfor %}
             {% endfor %}
 
-            {% block body %}{% endblock %}
+            {% block body %}{% block content %}{% endblock %}{% endblock %}
 
             <div id="footer" class="text-center">
                 <hr />
@@ -51,6 +52,7 @@
             <script src="{{ asset('vendor/bootstrap/docs/assets/js/bootstrap.js') }}"></script>
             <script src="{{ asset('vendor/hinclude/hinclude.js') }}"></script>
             <script src="{{ asset('vendor/select2/select2.js') }}"></script>
+            <script src="{{ asset('vendor/fancybox/source/jquery.fancybox.js') }}"></script>
             <script src="{{ asset('bundles/zenstruckform/js/helper.js') }}"></script>
             <script src="{{ asset('bundles/zenstruckdashboard/js/helper.js') }}"></script>
             <script src="{{ asset('bundles/zenstruckmedia/js/twitter.js') }}"></script>
