--- a/src/Zenstruck/MediaBundle/Resources/views/Twitter/_file_actions.html.twig
+++ b/src/Zenstruck/MediaBundle/Resources/views/Twitter/_file_actions.html.twig
@@ -1,7 +1,7 @@
 {% if file.isDir and manager.permissions.canDeleteDir %}
-    <a title="Delete" class="btn btn-mini btn-danger method-delete" href="{{ path('zenstruck_media_delete_dir', manager.requestParams({ 'filename': file.getFilename })) }}"><i class="icon-trash icon-white"></i></a>
+    <a title="Delete" class="btn btn-mini btn-danger delete" href="{{ path('zenstruck_media_delete_dir', manager.requestParams({ 'filename': file.getFilename })) }}"><i class="icon-trash icon-white"></i></a>
 {% elseif manager.permissions.canDeleteFile %}
-    <a title="Delete" class="btn btn-mini btn-danger method-delete" href="{{ path('zenstruck_media_delete_file', manager.requestParams({ 'filename': file.getFilename })) }}"><i class="icon-trash icon-white"></i></a>
+    <a title="Delete" class="btn btn-mini btn-danger delete" href="{{ path('zenstruck_media_delete_file', manager.requestParams({ 'filename': file.getFilename })) }}"><i class="icon-trash icon-white"></i></a>
 {% endif %}
 
 {% if file.isDir and manager.permissions.canRenameDir %}
