--- a/src/Zenstruck/MediaBundle/Resources/views/Twitter/list.html.twig
+++ b/src/Zenstruck/MediaBundle/Resources/views/Twitter/list.html.twig
@@ -1,9 +1,9 @@
-{% extends '::base.html.twig' %}
+{% extends manager.layout ? 'ZenstruckMediaBundle:Twitter:' ~ manager.layout ~ '_layout.html.twig' : default_layout %}
 
 {% block title %}Media Manager{% endblock %}
 
 {% block body %}
-    <div id="zenstruck-media">
+    <div id="zenstruck-media" data-layout="{{ manager.layout }}">
         <div class="btn-toolbar">
             <div class="btn-group">
                 {% if manager.path %}
@@ -55,8 +55,8 @@
             </div>
 
             <div class="btn-group">
-                <a href="{{ path('zenstruck_media_list', manager.requestParams({ 'view': 'detail' })) }}" title="Detail view" class="btn btn-small{{ manager.view == 'detail' ? ' active' : null }}"><i class="icon-list"></i></a>
                 <a href="{{ path('zenstruck_media_list', manager.requestParams({ 'view': 'thumb' })) }}" title="Thumbnail view" class="btn btn-small{{ manager.view == 'thumb' ? ' active' : null }}"><i class="icon-th"></i></a>
+                <a href="{{ path('zenstruck_media_list', manager.requestParams({ 'view': 'detail' })) }}" title="Detail view" class="btn btn-small{{ manager.view == 'detail' ? ' active' : null }}"><i class="icon-list"></i></a>
             </div>
         </div>
         <hr />
