--- a/src/Zenstruck/MediaBundle/Resources/views/Twitter/form_media_type.html.twig
+++ b/src/Zenstruck/MediaBundle/Resources/views/Twitter/form_media_type.html.twig
@@ -6,7 +6,7 @@
             {% if not required %}
                 <a href="#" class="btn zenstruck-media-clear"><b class="icon-remove"></b></a>
             {% endif %}
-            <a href="/media?layout=iframe" class="btn zenstruck-media-select">Browse...</a>
+            <a href="{{ media_url }}" class="btn zenstruck-media-select">Browse...</a>
         </div>
     {% endspaceless %}
 {% endblock %}
