--- a/src/Sandbox/AppBundle/Resources/views/Widget/demos.html.twig
+++ b/src/Sandbox/AppBundle/Resources/views/Widget/demos.html.twig
@@ -14,5 +14,12 @@
             <td><em>This Page</em></td>
             <td><a href="https://github.com/kbond/ZenstruckDashboardBundle">ZenstruckDashboardBundle</a></td>
         </tr>
+        <tr>
+            <td>
+                <a href="{{ path('zenstruck_media_list') }}">Media Manager</a><br />
+                <a href="{{ path('article_edit_random') }}">Form</a> <em>CKEditor/FormType</em><br />
+            </td>
+            <td><a href="https://github.com/kbond/ZenstruckMediaBundle">ZenstruckMediaBundle</a></td>
+        </tr>
     </tbody>
 </table>
