switched to angular media-bundle

--- a/src/Sandbox/AppBundle/Resources/views/Widget/demos.html.twig
+++ b/src/Sandbox/AppBundle/Resources/views/Widget/demos.html.twig
@@ -16,7 +16,7 @@
         </tr>
         <tr>
             <td>
-                <a href="{{ path('zenstruck_media_list') }}">Media Manager</a><br />
+                <a href="{{ path('zenstruck_media_index') }}">Media Manager</a><br />
                 <a href="{{ path('article_edit_random') }}">Form</a> <em>CKEditor/FormType</em><br />
             </td>
             <td><a href="https://github.com/kbond/ZenstruckMediaBundle">ZenstruckMediaBundle</a></td>
