--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -60,6 +60,9 @@
             {% javascripts output='_static/js/script.js' filter='?uglifyjs2'
                 '//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js'
                 'vendor/bootstrap/docs/assets/js/bootstrap.js'
+                '//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js'
+                'vendor/ngUpload/ng-upload.min.js'
+                'bundles/zenstruckmedia/js/app.js'
                 'vendor/hinclude/hinclude.js'
                 'vendor/select2/select2.js'
                 'ext/ckeditor/ckeditor.js'
