--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -69,7 +69,8 @@
                 'vendor/fancybox/source/jquery.fancybox.js'
                 'bundles/zenstruckform/js/helper.js'
                 'bundles/zenstruckdashboard/js/helper.js'
-                'bundles/zenstruckmedia/js/helper.js'
+                'bundles/zenstruckmedia/js/widget.js'
+                'bundles/zenstruckmedia/js/lightbox.widget.js'
                 'js/script.js'
             %}
                 <script type="text/javascript" src="{{ asset_url }}"></script>
