added zenstruck/resource-bundle for articles

--- a/src/Sandbox/AppBundle/Resources/views/Widget/demos.html.twig
+++ b/src/Sandbox/AppBundle/Resources/views/Widget/demos.html.twig
@@ -7,8 +7,11 @@
     </thead>
     <tbody>
         <tr>
-            <td><a href="{{ path('article') }}">Article Admin</a></td>
-            <td><a href="https://github.com/kbond/ZenstruckFormBundle">ZenstruckFormBundle</a></td>
+            <td><a href="{{ path('list_articles') }}">Article Admin</a></td>
+            <td>
+                <a href="https://github.com/kbond/ZenstruckFormBundle">ZenstruckFormBundle</a><br />
+                <a href="https://github.com/kbond/ZenstruckResourceBundle">ZenstruckResourceBundle</a>
+            </td>
         </tr>
         <tr>
             <td><em>This Page</em></td>
@@ -17,7 +20,7 @@
         <tr>
             <td>
                 <a href="{{ path('zenstruck_media_index') }}">Media Manager</a><br />
-                <a href="{{ path('article_edit_random') }}">Form</a> <em>CKEditor/FormType</em><br />
+                <a href="{{ path('edit_random_article') }}">Form</a> <em>CKEditor/FormType</em><br />
             </td>
             <td><a href="https://github.com/kbond/ZenstruckMediaBundle">ZenstruckMediaBundle</a></td>
         </tr>
