--- a/src/Sandbox/AppBundle/Resources/views/Article/edit.html.twig
+++ b/src/Sandbox/AppBundle/Resources/views/Article/edit.html.twig
@@ -3,13 +3,14 @@
 {% block title %}Edit Article{% endblock %}
 
 {% block body %}
-    <form class="form-horizontal" method="post" novalidate="novalidate" {{ form_enctype(grouped_form.form) }}>
+    <form class="form-horizontal" action="{{ path('put_article', { id: article.id }) }}" method="post" novalidate="novalidate" {{ form_enctype(grouped_form.form) }}>
         {% include 'AppBundle:Article:_grouped_form.html.twig' with { 'grouped_form': grouped_form } %}
 
+        <input type="hidden" name="_method" value="PUT" />
         <div class="form-actions">
             <button class="btn btn-primary" type="submit">Edit</button>
-            <a class="btn" href="{{ path('article') }}">Cancel</a>
-            <a class="btn offset1 btn-danger method-delete" href="{{ path('article_delete', { 'id': entity.id }) }}">Delete</a>
+            <a class="btn" href="{{ path('list_articles') }}">Cancel</a>
+            <a class="btn offset1 btn-danger method-delete" href="{{ path('delete_article', { 'id': article.id }) }}">Delete</a>
         </div>
     </form>
 {% endblock %}
