--- a/src/Sandbox/AppBundle/Resources/views/Article/list.html.twig
+++ b/src/Sandbox/AppBundle/Resources/views/Article/list.html.twig
@@ -18,12 +18,12 @@
         </tr>
         </thead>
         <tbody>
-        {% for entity in entities %}
+        {% for article in articles %}
             <tr>
-                <td>{{ entity.title }}</td>
-                <td>{% if entity.date %}{{ entity.date|date('Y-m-d') }}{% endif %}</td>
+                <td>{{ article.title }}</td>
+                <td>{% if article.date %}{{ article.date|date('Y-m-d') }}{% endif %}</td>
                 <td>
-                    <a class="btn btn-small" href="{{ path('article_edit', { 'id': entity.id }) }}">Edit</a>
+                    <a class="btn btn-small" href="{{ path('edit_article', { 'id': article.id }) }}">Edit</a>
                 </td>
             </tr>
         {% endfor %}
@@ -31,7 +31,7 @@
     </table>
 
     <p>
-        <a class="btn btn-primary" href="{{ path('article_new') }}">Create a new entry</a>
+        <a class="btn btn-primary" href="{{ path('new_article') }}">Create a new entry</a>
     </p>
 {% endblock %}
 
