--- a/src/Sandbox/AppBundle/Resources/views/Article/new.html.twig
+++ b/src/Sandbox/AppBundle/Resources/views/Article/new.html.twig
@@ -3,12 +3,12 @@
 {% block title %}New Article{% endblock %}
 
 {% block body %}
-    <form class="form-horizontal" method="post" novalidate="novalidate" {{ form_enctype(grouped_form.form) }}>
+    <form class="form-horizontal" action="{{ path('post_article') }}" method="post" novalidate="novalidate" {{ form_enctype(grouped_form.form) }}>
         {% include 'AppBundle:Article:_grouped_form.html.twig' with { 'grouped_form': grouped_form } %}
 
         <div class="form-actions">
             <button class="btn btn-primary" type="submit">Create</button>
-            <a class="btn" href="{{ path('article') }}">Cancel</a>
+            <a class="btn" href="{{ path('list_articles') }}">Cancel</a>
         </div>
     </form>
 {% endblock %}
