--- a/src/Sandbox/AppBundle/Resources/views/Widget/demos.html.twig
+++ b/src/Sandbox/AppBundle/Resources/views/Widget/demos.html.twig
@@ -10,7 +10,8 @@
             <td><a href="{{ path('list_articles') }}">Article Admin</a></td>
             <td>
                 <a href="https://github.com/kbond/ZenstruckFormBundle">ZenstruckFormBundle</a><br />
-                <a href="https://github.com/kbond/ZenstruckResourceBundle">ZenstruckResourceBundle</a>
+                <a href="https://github.com/kbond/ZenstruckResourceBundle">ZenstruckResourceBundle</a><br />
+                <a href="https://github.com/kbond/ZenstruckDataGridBundle">ZenstruckDataGridBundle</a>
             </td>
         </tr>
         <tr>
