updated deps, added sorting to grid

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,6 +13,7 @@
                 'vendor/fancybox/source/jquery.fancybox.css'
                 'bundles/zenstruckdashboard/css/twitter.css'
                 'bundles/zenstruckmedia/css/twitter.css'
+                'bundles/zenstruckdatagrid/css/twitter.css'
                 'css/style.css'
             %}
 
