upgrade dashboard-bundle

--- a/src/Sandbox/AppBundle/Resources/views/Widget/dashboard.html.twig
+++ b/src/Sandbox/AppBundle/Resources/views/Widget/dashboard.html.twig
@@ -1,4 +1,4 @@
-{% extends 'ZenstruckDashboardBundle:Twitter:dashboard.html.twig' %}
+{% extends 'ZenstruckDashboardBundle:Bootstrap2:dashboard.html.twig' %}
 
 {% block meta_title %}Dashboard{% endblock %}
 {% block title %}ZenstruckDashboardBundle <small>Demo</small>{% endblock %}
