adjusted action link

--- a/src/Sandbox/AppBundle/Resources/views/Article/list.html.twig
+++ b/src/Sandbox/AppBundle/Resources/views/Article/list.html.twig
@@ -12,7 +12,7 @@
 
 {% block grid_action %}
     <td>
-        <a class="btn btn-small" href="{{ path('edit_article', { 'id': object.id }) }}"><i class="icon-pencil"></i> Edit</a>
+        <a class="btn btn-default btn-xs" href="{{ path('edit_article', { 'id': object.id }) }}"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
     </td>
 {% endblock %}
 
